test/typecheck/bad-global-no-init-expr.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (global i32)
  (global (mut f32)))
(;; STDERR ;;;
out/test/typecheck/bad-global-no-init-expr.txt:4:4: error: type mismatch in constant expression, expected [i32] but got []
  (global i32)
   ^^^^^^
out/test/typecheck/bad-global-no-init-expr.txt:5:4: error: type mismatch in constant expression, expected [f32] but got []
  (global (mut f32)))
   ^^^^^^
;;; STDERR ;;)
